syntax = "proto3";

package test;

message TestResult {
  string result = 1;
}
